--- a/styles/contacts/overlay_add_contact.css
+++ b/styles/contacts/overlay_add_contact.css
@@ -165,9 +165,16 @@
     font-weight: 700;
     gap: 4px;
     cursor: pointer;
+    border: none;
+    font-size: 16px;
 }
 
-#bt-create-contact:hover{
+#bt-create-contact:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+#bt-create-contact:not(:disabled):hover{
     background-color: #29ABE2;
     box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
 }
